# jw-org-mcp

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/jw_org_mcp/: auth.py  client.py  config.py  models.py  parser.py  server.py
