[project]
name = "jw-org-mcp"
version = "0.1.0"
description = "Model Context Protocol server for verified access to jw.org content"
readme = "README.md"
authors = [
    { name = "Bjern Potgieter", email = "bjern@toxzen.co.za" }
]
license = "GPL-3.0-only"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "brotli>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "bandit>=1.7.0",
]

[project.scripts]
jw-org-mcp = "jw_org_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=jw_org_mcp --cov-report=term-missing --cov-report=html"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.uv]
# Security: Override transitive dependencies to fix known vulnerabilities
# PyJWT <=2.11.0: CVE-2026-28498 - accepts unknown `crit` header extensions (GHSA #19)
# diskcache <=5.6.3: unsafe pickle deserialization (GHSA #18) - no patch available yet,
#   pulled in via fastmcp -> py-key-value-aio[disk]; excluded by constraining to memory-only
override-dependencies = [
    "pyjwt>=2.12.0",
]
constraint-dependencies = [
    "pyjwt>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "bandit>=1.7.0",
]
